--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,12 @@
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react": "^18.x",
+    "react-dom": "^18.x",
+    "react-scripts": "latest",
+    "react-datepicker": "^4.24.0",
+    "recharts": "^2.7.2",
+    "date-fns": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
