--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
     "test": "react-scripts test"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
-  }
+  "tailwindcss": "^3.x",
+  "postcss": "^8.x",
+  "autoprefixer": "^10.x"
+}
 }
