--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.x",
     "react-scripts": "latest",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "react-router-dom": "^6.22.3"
   },
   "scripts": {
     "start": "react-scripts start",
