--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,20 @@
     "test": "react-scripts test"
   },
   "devDependencies": {
-  "tailwindcss": "^3.x",
-  "postcss": "^8.x",
-  "autoprefixer": "^10.x"
-}
+    "tailwindcss": "^3.x",
+    "postcss": "^8.x",
+    "autoprefixer": "^10.x"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
